--- a/templates/blog.html
+++ b/templates/blog.html
@@ -9,7 +9,7 @@
 {{ section.content | safe }}
 
 <p>
-This blog can also be read in a feed reeder by subscribing to its
+This blog can be read in a feed reeder by subscribing to its
 <a href="{{ config.base_url | safe }}/atom.xml">Atom</a> or
 <a href="{{ config.base_url | safe }}/rss.xml">RSS</a> feed.
 </p>
