--- a/templates/header.html
+++ b/templates/header.html
@@ -2,10 +2,11 @@
 	<div class="header-nav-container">
 		<nav>
 			<ul>
-				<li class="lhs"><a href="{{ config.base_url | safe }}"><img alt="Alice Logo" src="{{ config.base_url | safe }}/logo64x64.png"></a></li>
+				<li class="lhs logo"><a href="{{ config.base_url | safe }}"><img alt="Alice Logo" src="{{ config.base_url | safe }}/logo64x64.png"></a></li>
 				<li class="lhs"><a href="{{ config.base_url | safe }}">Alice</a></li>
 				<li class="first-rhs rhs"><a href="{{ config.base_url | safe }}/about">About</a></li>
 				<li class="rhs"><a href="{{ config.base_url | safe }}/blog">Blog</a></li>
+				<li class="rhs"><a href="https://github.com/alicecaml/alice">Github</a></li>
 			</ul>
 		</nav>
 	</div>
