--- a/templates/page.html
+++ b/templates/page.html
@@ -2,7 +2,7 @@
 {% extends "base.html" %}
 
 {% block title %}
-{{ config.title }}: {{ page.title }}
+Alice: {{ page.title }}
 {% endblock title %}
 
 {% block content %}
