Remove external link style

--- a/templates/header.html
+++ b/templates/header.html
@@ -7,7 +7,7 @@
 				<li class="first-rhs rhs"><a href="{{ config.base_url | safe }}/about">About</a></li>
 				<li class="rhs"><a href="{{ config.base_url | safe }}/blog">Blog</a></li>
 				<li class="rhs"><a href="{{ config.base_url | safe }}/install">Install</a></li>
-				<li class="rhs"><a class="external" href="https://github.com/alicecaml/alice">Github</a></li>
+				<li class="rhs"><a href="https://github.com/alicecaml/alice">Github</a></li>
 			</ul>
 		</nav>
 	</div>
