--- a/templates/blog.html
+++ b/templates/blog.html
@@ -14,6 +14,9 @@ This blog can be read in a feed reeder by subscribing to its
 <a href="{{ config.base_url | safe }}/rss.xml">RSS</a> feed.
 </p>
 
+See the <a href="{{ config.base_url | safe }}/tags">Tags</a> page for a list of posts organized by tag.
+
+<h2>Posts</h2>
 
 <ul>
   {% for page in section.pages %}
