--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,7 +1,7 @@
 <footer>
 	<ul class="copyright">
 		<li>
-			© {{ now() | date(format="%Y") }} Stephen Sherratt.
+			© {{ now() | date(format="%Y") }} Stephen Sherratt
 		</li>
 	</ul>
 </footer>
