--- a/templates/base.html
+++ b/templates/base.html
@@ -45,6 +45,7 @@
 		<link rel="alternate" type="application/atom+xml" title="Alice the Caml" href="{{ config.base_url | safe }}/atom.xml">
 
 		<link rel="stylesheet" href="{{ config.base_url | safe }}/style.css">
+		<script defer src="{{ config.base_url | safe }}/copy_code.js"></script>
 		<title>{% block title %} {% endblock title %}</title>
 	</head>
 	<body>
