--- a/templates/base.html
+++ b/templates/base.html
@@ -17,28 +17,30 @@
 		<meta property="og:url" content="{{ page.permalink | safe }}">
 
 		{% if page.description %}
-				<meta name="description" content="{{ page.description }}">
-				<meta property="og:description" content="{{ page.description }}">
+			<meta name="description" content="{{ page.description }}">
+			<meta property="og:description" content="{{ page.description }}">
+		{% elif section.description %}
+			<meta name="description" content="{{ section.description }}">
+			<meta property="og:description" content="{{ section.description }}">
+		{% else %}
+			<meta name="description" content="A radical, experimental OCaml build system and package manager">
+			<meta property="og:description" content="A radical, experimental OCaml build system and package manager">
 		{% endif %}
 
 		{% if page.date %}
-				<meta property="article:published_time" content="{{ page.date | date(format="%Y-%m-%dT%H:%M:%S%:z") }}">
+			<meta property="article:published_time" content="{{ page.date | date(format="%Y-%m-%dT%H:%M:%S%:z") }}">
 		{% endif %}
 		{% if page.extra.og_image %}
-				<meta property="og:image" content="{{ page.permalink | safe }}{{ page.extra.og_image }}">
+			<meta property="og:image" content="{{ page.permalink | safe }}{{ page.extra.og_image }}">
 		{% else %}
-				<meta property="og:image" content="{{ config.base_url | safe }}/logo512x256.png">
+			<meta property="og:image" content="{{ config.base_url | safe }}/logo512x256.png">
 		{% endif %}
 		{% elif section %}
-				<meta property="og:title" content="{{ section.title }}">
+			<meta property="og:title" content="{{ section.title }}">
 		{% endif %}
 
 		<meta property="og:image" content="{{ config.base_url | safe }}/logo512x256.png">
 
-		{% if section.description %}
-				<meta name="description" content="{{ section.description }}">
-				<meta property="og:description" content="{{ section.description }}">
-		{% endif %}
 
 		<link rel="icon" type="image/x-icon" href="{{ config.base_url | safe }}/favicon.png">
 		<link rel="alternate" type="application/rss+xml" title="Alice the Caml" href="{{ config.base_url | safe }}/rss.xml">
