--- a/templates/page.html
+++ b/templates/page.html
@@ -1,9 +1,7 @@
 {# A single leaf page inside a section (e.g. a blog post) #}
 {% extends "base.html" %}
 
-{% block title %}
-Alice: {{ page.title }}
-{% endblock title %}
+{% block title %}Alice: {{ page.title }}{% endblock title %}
 
 {% block content %}
 {{ page.content | safe }}
