--- a/templates/section.html
+++ b/templates/section.html
@@ -1,10 +1,4 @@
 {# Used by all section index pages (e.g. the root page, the blog index) #}
 {% extends "base.html" %}
 
-{% block title %}
-{% if section.title == config.title %}
-{{ config.title }}
-{% else %}
-Alice: {{ section.title }}
-{% endif %}
-{% endblock title %}
+{% block title %}{% if section.title == config.title %}{{ config.title }}{% else %}Alice: {{ section.title }}{% endif %}{% endblock title %}
