--- a/templates/base.html
+++ b/templates/base.html
@@ -11,32 +11,36 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 		{% if page %}
-		<meta property="og:type" content="article">
-		<meta property="og:title" content="{% block title %}{% endblock title %}">
-		<link rel="canonical" href="{{ page.permalink | safe }}">
-		<meta property="og:url" content="{{ page.permalink | safe }}">
+			<meta property="og:type" content="article">
+			<meta property="og:title" content="{% block title %}{% endblock title %}">
+			<link rel="canonical" href="{{ page.permalink | safe }}">
+			<meta property="og:url" content="{{ page.permalink | safe }}">
 
-		{% if page.description %}
-			<meta name="description" content="{{ page.description }}">
-			<meta property="og:description" content="{{ page.description }}">
-		{% elif section.description %}
-			<meta name="description" content="{{ section.description }}">
-			<meta property="og:description" content="{{ section.description }}">
-		{% else %}
-			<meta name="description" content="A radical, experimental OCaml build system and package manager">
-			<meta property="og:description" content="A radical, experimental OCaml build system and package manager">
-		{% endif %}
+			{% if page.description %}
+				<meta name="description" content="{{ page.description }}">
+				<meta property="og:description" content="{{ page.description }}">
+			{% else %}
+				<meta name="description" content="A radical, experimental OCaml build system and package manager">
+				<meta property="og:description" content="A radical, experimental OCaml build system and package manager">
+			{% endif %}
 
-		{% if page.date %}
-			<meta property="article:published_time" content="{{ page.date | date(format="%Y-%m-%dT%H:%M:%S%:z") }}">
-		{% endif %}
-		{% if page.extra.og_image %}
-			<meta property="og:image" content="{{ page.permalink | safe }}{{ page.extra.og_image }}">
-		{% else %}
-			<meta property="og:image" content="{{ config.base_url | safe }}/logo512x256.png">
-		{% endif %}
+			{% if page.date %}
+				<meta property="article:published_time" content="{{ page.date | date(format="%Y-%m-%dT%H:%M:%S%:z") }}">
+			{% endif %}
+			{% if page.extra.og_image %}
+				<meta property="og:image" content="{{ page.permalink | safe }}{{ page.extra.og_image }}">
+			{% else %}
+				<meta property="og:image" content="{{ config.base_url | safe }}/logo512x256.png">
+			{% endif %}
 		{% elif section %}
 			<meta property="og:title" content="{% block title %}{% endblock title %}">
+			{% if section.description %}
+				<meta name="description" content="{{ section.description }}">
+				<meta property="og:description" content="{{ section.description }}">
+			{% else %}
+				<meta name="description" content="A radical, experimental OCaml build system and package manager">
+				<meta property="og:description" content="A radical, experimental OCaml build system and package manager">
+			{% endif %}
 		{% endif %}
 
 		<meta property="og:image" content="{{ config.base_url | safe }}/logo512x256.png">
