--- a/sass/style.scss
+++ b/sass/style.scss
@@ -123,6 +123,7 @@ div.next-prev-nav-container ul {
   padding: 0;
   margin: 0;
   padding-top: 20px;
+  padding-bottom: 4px;
   list-style: none;
   display: flex;
 
