--- a/templates/header.html
+++ b/templates/header.html
@@ -4,9 +4,10 @@
 			<ul>
 				<li class="lhs logo"><a href="{{ config.base_url | safe }}"><img alt="Alice Logo" src="{{ config.base_url | safe }}/logo64x64.png"></a></li>
 				<li class="lhs hide-on-mobile"><a href="{{ config.base_url | safe }}">Alice</a></li>
-				<li class="first-rhs rhs"><a href="{{ config.base_url | safe }}/about">About</a></li>
+				<li class="first-rhs"><a href="{{ config.base_url | safe }}/about">About</a></li>
 				<li class="rhs"><a href="{{ config.base_url | safe }}/blog">Blog</a></li>
 				<li class="rhs"><a href="{{ config.base_url | safe }}/install">Install</a></li>
+				<li class="rhs"><a href="{{ config.base_url | safe }}/lsp">LSP</a></li>
 				<li class="rhs"><a href="https://github.com/alicecaml/alice">Github</a></li>
 			</ul>
 		</nav>
