--- a/templates/blog.html
+++ b/templates/blog.html
@@ -4,7 +4,7 @@
 {% import "macros.html" as macros %}
 
 {% block content %}
-<h1 class="title">{{ section.title }}</h1>
+<h1 class="title">Alice Blog</h1>
 
 {{ section.content | safe }}
 
