Add start year for copyright range

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,7 +1,7 @@
 <footer>
 	<ul class="copyright">
 		<li>
-			© {{ now() | date(format="%Y") }} <a href="https://www.alicecaml.org">alicecaml.org</a>
+			© 2025-{{ now() | date(format="%Y") }} <a href="https://www.alicecaml.org">alicecaml.org</a>
 		</li>
 	</ul>
 </footer>
